--- a/app/src/main/res/layout/view_state_handler.xml
+++ b/app/src/main/res/layout/view_state_handler.xml
@@ -105,7 +105,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="30dp"
                 android:indeterminate="true"
-                android:indeterminateTint="@color/blue" />
+                android:indeterminateTint="@color/system_blue_01" />
 
         </com.google.android.material.card.MaterialCardView>
 
