--- a/app/src/main/res/color/background_button_enabled.xml
+++ b/app/src/main/res/color/background_button_enabled.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/blue" android:state_enabled="true" />
-    <item android:color="@color/grey" />
+    <item android:color="@color/system_blue_01" android:state_enabled="true" />
+    <item android:color="@color/system_grey_02" />
 </selector>
 
 
