--- a/app/src/main/res/layout/item_profile.xml
+++ b/app/src/main/res/layout/item_profile.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/txtTextProfile"
                 android:layout_width="0dp"
                 android:textSize="14sp"
-                android:textColor="@color/dark_blue"
+                android:textColor="@color/system_blue_03"
                 android:fontFamily="@font/poppins_regular"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
@@ -50,7 +50,7 @@
             android:layout_height="0.5dp"
             android:layout_marginHorizontal="10dp"
             android:layout_gravity="bottom"
-            android:background="@color/grey"/>
+            android:background="@color/system_grey_02"/>
 
     </FrameLayout>
 
