--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,15 +14,20 @@
     <color name="shimmer">#ffffff</color>
     <!-- /ShimmerColors -->
 
-    <color name="orange">#FD7050</color>
-    <color name="blue">#6689E5</color>
-    <color name="light_blue">#B2B7E4</color>
-    <color name="neutral500">#64748B</color>
-    <color name="light_grey">#FBFBFB</color>
-    <color name="grey">#BFC2D7</color>
-    <color name="background">#FEFAEE</color>
-    <color name="dark_blue">#171E33</color>
-    <color name="dark">#283665</color>
-    <color name="red">#E5473F</color>
+    <color name="system_orange_01">#FD7050</color>
+
+    <color name="system_red_01">#E5473F</color>
+
+    <color name="system_blue_01">#6689E5</color>
+    <color name="system_blue_02">#B2B7E4</color>
+    <color name="system_blue_03">#171E33</color>
+    <color name="system_blue_04">#283665</color>
+
+    <color name="system_neutral_01">#64748B</color>
+    <color name="system_grey_01">#FBFBFB</color>
+    <color name="system_grey_02">#BFC2D7</color>
+
+    <color name="system_background">#FEFAEE</color>
+
     <color name="transparent">#00000000</color>
 </resources>
