--- a/app/src/main/res/layout/fragment_password.xml
+++ b/app/src/main/res/layout/fragment_password.xml
@@ -5,6 +5,12 @@
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:minHeight="40dp"/>
+
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/txtTitlePassword"
         android:layout_width="match_parent"
@@ -58,12 +64,17 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:minHeight="40dp"/>
+
     <com.spravochnic.scbguide.utils.view.CustomButtonView
         android:id="@+id/btnPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="35dp"
         android:enabled="false"
         android:text="@string/password_btn" />
 
