--- a/app/src/main/res/layout/fragment_service_recover.xml
+++ b/app/src/main/res/layout/fragment_service_recover.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_collapseMode="pin"
-            app:layout_scrollFlags="scroll|enterAlways|snap"
+            app:layout_scrollFlags="enterAlways"
             app:title="@string/recover_service_title" />
 
     </com.google.android.material.appbar.AppBarLayout>
