--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <fragment
-        android:id="@+id/fgMainContainer"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        tools:ignore="FragmentTagUsage"
-        app:navGraph="@navigation/root_nav_graph"/>
+<!--    <fragment-->
+<!--        android:id="@+id/fgMainContainer"-->
+<!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:defaultNavHost="true"-->
+<!--        tools:ignore="FragmentTagUsage"-->
+<!--        app:navGraph="@navigation/root_nav_graph"/>-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
