--- a/app/src/main/res/navigation/auth_nav_graph.xml
+++ b/app/src/main/res/navigation/auth_nav_graph.xml
@@ -20,6 +20,9 @@
         <action
             android:id="@+id/action_loginFragment_to_recoverServiceFragment"
             app:destination="@id/recoverServiceFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_baseFragment"
+            app:destination="@id/MainFragment" />
 
     </fragment>
 
@@ -34,5 +37,9 @@
         android:name="com.spravochnic.scbguide.ui.auth.recovery_service.RecoverServiceFragment"
         android:label="RecoverServiceFragment"
         tools:layout="@layout/fragment_service_recover" />
+    <fragment
+        android:id="@+id/MainFragment"
+        android:name="com.spravochnic.scbguide.ui.main.MainFragment"
+        android:label="MainFragnent" />
 
 </navigation>
