--- a/app/src/main/res/navigation/root_nav_graph.xml
+++ b/app/src/main/res/navigation/root_nav_graph.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/root_nav_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_nav_graph"
+    app:startDestination="@id/lectureFragment">
 
-
+    <fragment
+        android:id="@+id/lectureFragment"
+        android:name="com.spravochnic.scbguide.ui.lecture.LectureFragment"
+        android:label="LectureFragment"
+        tools:layout="@layout/fragment_lecture"/>
 
 </navigation>
