--- a/app/src/main/res/navigation/root_nav_graph.xml
+++ b/app/src/main/res/navigation/root_nav_graph.xml
@@ -3,12 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_nav_graph"
-    app:startDestination="@id/lectureFragment">
+    app:startDestination="@id/serverFragment">
 
     <fragment
         android:id="@+id/lectureFragment"
         android:name="com.spravochnic.scbguide.ui.lecture.LectureFragment"
         android:label="LectureFragment"
         tools:layout="@layout/fragment_lecture"/>
+    <fragment
+        android:id="@+id/serverFragment"
+        android:name="com.spravochnic.scbguide.ui.server.ServerFragment"
+        android:label="ServerFragment" />
 
 </navigation>
