--- a/app/src/main/res/layout/item_lecture.xml
+++ b/app/src/main/res/layout/item_lecture.xml
@@ -8,12 +8,31 @@
     android:layout_marginVertical="20dp"
     android:layout_marginHorizontal="20dp">
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/nameLecture"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:paddingVertical="20dp"
-        android:paddingHorizontal="20dp"
-        tools:text="@tools:sample/lorem"
-        android:layout_height="wrap_content" />
+        android:paddingHorizontal="20dp">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/nameLecture"
+            android:layout_width="0dp"
+            tools:text="@tools:sample/lorem"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/imageLecture"
+            tools:src="@tools:sample/avatars"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
+
+    </LinearLayout>
+
+
 
 </com.google.android.material.card.MaterialCardView>
