--- a/app/src/main/res/layout/item_lecture.xml
+++ b/app/src/main/res/layout/item_lecture.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="16dp"
+    app:strokeWidth="1dp"
     android:layout_marginVertical="20dp"
     android:layout_marginHorizontal="20dp">
 
